--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@icon-park/vue-next": "^1.4.2",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "element-plus": "^2.3.7",
     "pinia": "^2.1.4",
+    "quill": "^1.3.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
