--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "baseUrl": "./",
+    "allowSyntheticDefaultImports": true,
 
     "paths": {
       "@/*": ["./src/*"],
