--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "super-cv",
+  "projectName": "开源简历",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,13 +11,15 @@
   },
   "repository": {
     "url": "https://github.com/hec9527/openCV",
-    "type": "github"
+    "type": "github",
+    "pr": "https://github.com/hec9527/openCV/pulls"
   },
   "dependencies": {
     "@icon-park/vue-next": "^1.4.2",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "element-plus": "^2.3.7",
+    "localforage": "^1.10.0",
     "pinia": "^2.1.4",
     "quill": "^1.3.7",
     "vue": "^3.3.4",
